# portia-sdk-python

./: ..flat.md  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  example.py  pyproject.toml
.github/workflows/: branch_checks.yml  create-release-pr.yml  create-release-tag.yml  deploy_pypi.yml  docs.yml  evals.yml  licence.yml  pyright.yml  ready_to_eval_labeller.yml  release.yml  ruff.yml  testing.yml
examples/: uniswap_trading_example.py
portia/: __init__.py  clarification.py  clarification_handler.py  cli.py  cloud.py  common.py  config.py  default_clarification_handler.py  errors.py  execution_context.py  llm_wrapper.py  logger.py  mcp_session.py  model.py  plan.py  plan_run.py  portia.py  prefixed_uuid.py  runner.py  storage.py  tool.py  tool_call.py  tool_registry.py  tool_wrapper.py  workflow.py
portia/_unstable/: __init__.py  browser_tool.py  model.py
portia/agents/: base_agent.py  context.py  execution_utils.py  one_shot_agent.py  verifier_agent.py
portia/agents/utils/: final_output_summarizer.py  step_summarizer.py
portia/execution_agents/: base_agent.py  base_execution_agent.py  context.py  default_execution_agent.py  execution_agent.py  execution_utils.py  one_shot_agent.py  output.py
portia/execution_agents/utils/: final_output_summarizer.py  step_summarizer.py
portia/introspection_agents/: default_introspection_agent.py  introspection_agent.py
portia/open_source_tools/: __init__.py  calculator_tool.py  image_understanding_tool.py  llm_tool.py  local_file_reader_tool.py  local_file_writer_tool.py  registry.py  search_tool.py  weather.py
portia/planners/: __init__.py  context.py  one_shot_planner.py  planner.py
portia/planning_agents/: base_planning_agent.py  context.py  default_planning_agent.py
portia/templates/: default_planning_agent.xml.jinja  example_plans.py  query_planner.xml.jinja  render.py  tool_description.xml.jinja
portia/trading/: __init__.py  uniswap.py
tests/: conftest.py  utils.py
tests/integration/: mcp_server.py  test_e2e.py  test_llm_wrapper.py  test_mcp_session.py  test_model.py  test_portia_cloud.py  test_runner_context.py
tests/unit/: test_clarification_handler.py  test_clarifications.py  test_common.py  test_config.py  test_llm_wrapper.py  test_logging.py  test_model.py  test_plan.py  test_plan_builder.py  test_plan_run.py  test_plan_storage.py  test_portia.py  test_runner.py  test_storage.py  test_tool.py  test_tool_registry.py  test_tool_wrapper.py  test_workflow.py
tests/unit/agents/: test_base_agent.py  test_context.py  test_execution_utils.py  test_oneshot_agent.py  test_verifier_agent.py
tests/unit/agents/utils/: test_final_output_summarizer.py  test_step_summarizer.py
tests/unit/execution_agents/: test_base_execution_agent.py  test_context.py  test_default_execution_agent.py  test_execution_utils.py  test_oneshot_agent.py  test_output.py
tests/unit/execution_agents/utils/: test_final_output_summarizer.py  test_step_summarizer.py
tests/unit/introspection_agents/: test_default_introspection_agent.py
tests/unit/open_source_tools/: conftest.py  test_calculator_tool.py  test_image_understanding_tool.py  test_llm_tool.py  test_search_tool.py  test_weather_tool.py
tests/unit/planners/: test_one_shot_planner.py  test_planner.py
tests/unit/planning_agents/: test_default_planning_agent.py
