[tool.poetry]
name = "portia-sdk-python"
version = "0.1.0-alpha.1"
description = "Portia Labs Python SDK for building agentic workflows."
authors = ["Tech <tech@portialabs.ai>"]
readme = "README.md"
repository = "https://pypi.org/TomPortia/aitrop-sdk-python/"
homepage = "https://www.portialabs.ai/"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.8.0"
pytest = ">=8.3.3"
pytest-rerunfailures = "^14.0"
pytest-cov = "^5.0.0"
pyright = "^1.1.382"
pytest-httpx = "^0.33.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.publish]
repository = "pypi"