[tool.poetry]
name = "portia-sdk-python"
version = "0.1.6"
description = "Portia Labs Python SDK for building agentic workflows."
authors = ["Hello <hello@portialabs.ai>"]
readme = "README.md"
repository = "https://pypi.org/project/portia-sdk-python/"
homepage = "https://www.portialabs.ai/"
license = "MIT License"
packages = [
  {include = "portia"}
]
documentation = "https://docs.portialabs.ai"
keywords = ["LLM", "agentic", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha"
]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pydantic = "^2.10.3"
jinja2 = "^3.1.4"
instructor = ">=1.7.0,<1.7.5"
anthropic = ">=0.41.0"
langchain-anthropic = "^0.3.0"
langchain-core = "^0.3.25"
langchain-mistralai = "^0.2.3"
langchain-openai = "^0.3"
mistralai = "^1.2.5"
langchain = "^0.3.17"
langgraph = "^0.2.59"
click = "^8.1.7"
loguru = "^0.7.3"
python-dotenv = "^1.0.1"
pandas = "^2.2.3"
pytest-mock = "^3.14.0"
openpyxl = "^3.1.5"
mcp = "^1.3.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.8.0"
ruff = "^0.8.0"
pytest = ">=8.3.3"
pytest-rerunfailures = "^14.0"
pytest-cov = "^5.0.0"
pyright = "^1.1.382"
pytest-httpx = "^0.33.0"
pytest-xdist = {extras = ["psutil"], version = "^3.6.1"}
pytest-asyncio = "^0.25.3"

[tool.ruff]
line-length=100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D203",    # Disables checks for having a blank line before a class docstring. We instead have no-blank-line-before-class (D211) enabled.
  "D213",    # Disables checks for multi-line docstrings not starting on the first line. We instead have multi-line-summary-first-line (D212) enabled.
  "EM101",   # Disables checks for missing exception message arguments. We prefer single-line exception statements for simplicity and terseness.
  "EM102",   # Disables checks for f-string usage in exception messages. We prefer single-line exception statements with f-strings for simplicity and terseness.
  "TRY003",  # Disables checks for long error messages. We prefer to provide as much context to users as possible but want to avoid a proliferation of error classes.
]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
  "S101",    # Disables check for asserts. Asserts in test cases can be useful.
  "PLR2004", # Disables magic number checks. Its normal to assert using magic numbers for things like array length.
  "INP001",  # Disables checks for implicit namespace packages. Tests are not part of the package.
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
  "pydantic.BaseModel", # Tells ruff that BaseModel instances need to be evaluated at runtime.
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.setuptools.package-data]
portia = ["templates/**/*.jinja"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Failing to pass a value to the 'type_params' parameter of 'typing.ForwardRef._evaluate':DeprecationWarning",  # this comes from LangChain
]
addopts = [
  "--cov",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--import-mode=importlib"
]

[tool.coverage.run]
omit = [
    "*/tests/*", # Don't cover test files themselves
    "example.py", # Don't cover example
]

[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    "pragma: no cover",
]

[[tool.pydoc-markdown.loaders]]
type = "python"

[[tool.pydoc-markdown.processors]]
type = "filter"
expression = "not 'test' in name and not 'cli' in name and not 'prefixed_uuid' in name and not 'common' in name and not 'templates' in name and default()"
skip_empty_modules = true

[[tool.pydoc-markdown.processors]]
type = "smart"

[[tool.pydoc-markdown.processors]]
type = "crossref"

[tool.pydoc-markdown.renderer]
type = "docusaurus"
relative_output_path="SDK"
sidebar_top_level_label=""

[tool.poetry.scripts]
portia-cli = "portia.cli:cli"

[tool.licensecheck]
using = "poetry"
ignore_packages = [
  "mistralai", # MistralAI is Apache 2.0 licensed: https://github.com/mistralai/client-python?tab=Apache-2.0-1-ov-file
] 
